crates/tlang_parser/tests/snapshots/parser__pattern_matching_enum.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = match 1 { Foo([bar]) => bar };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 11,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 10,
          kind: Match(MatchExpression(
            expression: Expr(
              id: 4,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 14,
                end: 15,
                start_lc: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 15,
                ),
              ),
            ),
            arms: [
              MatchArm(
                id: 9,
                pattern: Pat(
                  id: 7,
                  kind: Enum(EnumPattern(
                    path: Path(
                      segments: [
                        Ident(
                          name: "Foo",
                          span: Span(
                            start: 18,
                            end: 21,
                            start_lc: LineColumn(
                              line: 0,
                              column: 18,
                            ),
                            end_lc: LineColumn(
                              line: 0,
                              column: 21,
                            ),
                          ),
                        ),
                      ],
                      res: Unresolved,
                      span: Span(
                        start: 18,
                        end: 21,
                        start_lc: LineColumn(
                          line: 0,
                          column: 18,
                        ),
                        end_lc: LineColumn(
                          line: 0,
                          column: 21,
                        ),
                      ),
                    ),
                    elements: [
                      (Ident(
                        name: "0",
                        span: Span(
                          start: 0,
                          end: 0,
                          start_lc: LineColumn(
                            line: 0,
                            column: 0,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 0,
                          ),
                        ),
                      ), Pat(
                        id: 6,
                        kind: List([
                          Pat(
                            id: 5,
                            kind: Identifier(Ident(
                              name: "bar",
                              span: Span(
                                start: 23,
                                end: 26,
                                start_lc: LineColumn(
                                  line: 0,
                                  column: 23,
                                ),
                                end_lc: LineColumn(
                                  line: 0,
                                  column: 26,
                                ),
                              ),
                            )),
                            leading_comments: [],
                            trailing_comments: [],
                            span: Span(
                              start: 23,
                              end: 26,
                              start_lc: LineColumn(
                                line: 0,
                                column: 23,
                              ),
                              end_lc: LineColumn(
                                line: 0,
                                column: 26,
                              ),
                            ),
                          ),
                        ]),
                        leading_comments: [],
                        trailing_comments: [],
                        span: Span(
                          start: 22,
                          end: 27,
                          start_lc: LineColumn(
                            line: 0,
                            column: 22,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 27,
                          ),
                        ),
                      )),
                    ],
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 18,
                    end: 28,
                    start_lc: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 28,
                    ),
                  ),
                ),
                guard: None,
                expression: Expr(
                  id: 8,
                  kind: Path(Path(
                    segments: [
                      Ident(
                        name: "bar",
                        span: Span(
                          start: 32,
                          end: 35,
                          start_lc: LineColumn(
                            line: 0,
                            column: 32,
                          ),
                          end_lc: LineColumn(
                            line: 0,
                            column: 35,
                          ),
                        ),
                      ),
                    ],
                    res: Unresolved,
                    span: Span(
                      start: 32,
                      end: 35,
                      start_lc: LineColumn(
                        line: 0,
                        column: 32,
                      ),
                      end_lc: LineColumn(
                        line: 0,
                        column: 35,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: 32,
                    end: 35,
                    start_lc: LineColumn(
                      line: 0,
                      column: 32,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 35,
                    ),
                  ),
                ),
              ),
            ],
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 37,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 37,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 38,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 38,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 38,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 38,
    ),
  ),
)
