crates/tlang_parser/tests/snapshots/parser__pattern_matching_with_guard.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = match 1 { a if a == 1 => 2, _ => 3 };\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 15,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: LineColumn(
                line: 0,
                column: 4,
              ),
              end: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 4,
            ),
            end: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 14,
          kind: Match(MatchExpression(
            expression: Expr(
              id: 4,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: LineColumn(
                  line: 0,
                  column: 14,
                ),
                end: LineColumn(
                  line: 0,
                  column: 15,
                ),
              ),
            ),
            arms: [
              MatchArm(
                id: 10,
                pattern: Pat(
                  id: 5,
                  kind: Identifier(Ident(
                    name: "a",
                    span: Span(
                      start: LineColumn(
                        line: 0,
                        column: 18,
                      ),
                      end: LineColumn(
                        line: 0,
                        column: 19,
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 18,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 19,
                    ),
                  ),
                ),
                guard: Some(Expr(
                  id: 8,
                  kind: BinaryOp(BinaryOpExpression(
                    op: Eq,
                    lhs: Expr(
                      id: 6,
                      kind: Path(Path(
                        segments: [
                          Ident(
                            name: "a",
                            span: Span(
                              start: LineColumn(
                                line: 0,
                                column: 23,
                              ),
                              end: LineColumn(
                                line: 0,
                                column: 24,
                              ),
                            ),
                          ),
                        ],
                        res: Unresolved,
                        span: Span(
                          start: LineColumn(
                            line: 0,
                            column: 23,
                          ),
                          end: LineColumn(
                            line: 0,
                            column: 24,
                          ),
                        ),
                      )),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 23,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 24,
                        ),
                      ),
                    ),
                    rhs: Expr(
                      id: 7,
                      kind: Literal(UnsignedInteger(1)),
                      leading_comments: [],
                      trailing_comments: [],
                      span: Span(
                        start: LineColumn(
                          line: 0,
                          column: 28,
                        ),
                        end: LineColumn(
                          line: 0,
                          column: 29,
                        ),
                      ),
                    ),
                  )),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 29,
                    ),
                  ),
                )),
                expression: Expr(
                  id: 9,
                  kind: Literal(UnsignedInteger(2)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 33,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 34,
                    ),
                  ),
                ),
              ),
              MatchArm(
                id: 13,
                pattern: Pat(
                  id: 11,
                  kind: Wildcard,
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 36,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 37,
                    ),
                  ),
                ),
                guard: None,
                expression: Expr(
                  id: 12,
                  kind: Literal(UnsignedInteger(3)),
                  leading_comments: [],
                  trailing_comments: [],
                  span: Span(
                    start: LineColumn(
                      line: 0,
                      column: 41,
                    ),
                    end: LineColumn(
                      line: 0,
                      column: 42,
                    ),
                  ),
                ),
              ),
            ],
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: LineColumn(
              line: 0,
              column: 8,
            ),
            end: LineColumn(
              line: 0,
              column: 44,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: LineColumn(
          line: 0,
          column: 0,
        ),
        end: LineColumn(
          line: 0,
          column: 45,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: LineColumn(
      line: 0,
      column: 0,
    ),
    end: LineColumn(
      line: 0,
      column: 45,
    ),
  ),
)
