crates/tlang_parser/tests/snapshots/parser__simple_arithmetic_sum_mult_precedence.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"1 + 2 * 3;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 8,
        kind: BinaryOp(BinaryOpExpression(
          op: Add,
          lhs: Expr(
            id: 4,
            kind: Literal(UnsignedInteger(1)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 1,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 1,
              ),
            ),
          ),
          rhs: Expr(
            id: 7,
            kind: BinaryOp(BinaryOpExpression(
              op: Mul,
              lhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 4,
                  end: 5,
                  start_lc: LineColumn(
                    line: 0,
                    column: 4,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                ),
              ),
              rhs: Expr(
                id: 6,
                kind: Literal(UnsignedInteger(3)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 8,
                  end: 9,
                  start_lc: LineColumn(
                    line: 0,
                    column: 8,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 9,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 4,
              end: 9,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 9,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 9,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 9,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 10,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 10,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 10,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 10,
    ),
  ),
)
