crates/tlang_parser/tests/snapshots/parser__simple_arithmetic_sum_mult_precedence_parentheses.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"(1 + 2) * 3;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 8,
        kind: BinaryOp(BinaryOpExpression(
          op: Mul,
          lhs: Expr(
            id: 6,
            kind: BinaryOp(BinaryOpExpression(
              op: Add,
              lhs: Expr(
                id: 4,
                kind: Literal(UnsignedInteger(1)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 1,
                  end: 2,
                  start_lc: LineColumn(
                    line: 0,
                    column: 1,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 2,
                  ),
                ),
              ),
              rhs: Expr(
                id: 5,
                kind: Literal(UnsignedInteger(2)),
                leading_comments: [],
                trailing_comments: [],
                span: Span(
                  start: 5,
                  end: 6,
                  start_lc: LineColumn(
                    line: 0,
                    column: 5,
                  ),
                  end_lc: LineColumn(
                    line: 0,
                    column: 6,
                  ),
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 7,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 7,
              ),
            ),
          ),
          rhs: Expr(
            id: 7,
            kind: Literal(UnsignedInteger(3)),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 10,
              end: 11,
              start_lc: LineColumn(
                line: 0,
                column: 10,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 11,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 11,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 11,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 12,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 12,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 12,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 12,
    ),
  ),
)
