crates/tlang_parser/tests/snapshots/parser__simple_arithmetic_with_identifiers.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"let x = 1; let y = 2; x + y;\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 5,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 3,
          kind: Identifier(Ident(
            name: "x",
            span: Span(
              start: 4,
              end: 5,
              start_lc: LineColumn(
                line: 0,
                column: 4,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 5,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 4,
            end: 5,
            start_lc: LineColumn(
              line: 0,
              column: 4,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 5,
            ),
          ),
        ),
        expression: Expr(
          id: 4,
          kind: Literal(UnsignedInteger(1)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 8,
            end: 9,
            start_lc: LineColumn(
              line: 0,
              column: 8,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 9,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 0,
        end: 10,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 10,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
    Stmt(
      id: 8,
      kind: Let(LetDeclaration(
        pattern: Pat(
          id: 6,
          kind: Identifier(Ident(
            name: "y",
            span: Span(
              start: 15,
              end: 16,
              start_lc: LineColumn(
                line: 0,
                column: 15,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 16,
              ),
            ),
          )),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 15,
            end: 16,
            start_lc: LineColumn(
              line: 0,
              column: 15,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 16,
            ),
          ),
        ),
        expression: Expr(
          id: 7,
          kind: Literal(UnsignedInteger(2)),
          leading_comments: [],
          trailing_comments: [],
          span: Span(
            start: 19,
            end: 20,
            start_lc: LineColumn(
              line: 0,
              column: 19,
            ),
            end_lc: LineColumn(
              line: 0,
              column: 20,
            ),
          ),
        ),
        type_annotation: None,
      )),
      span: Span(
        start: 11,
        end: 21,
        start_lc: LineColumn(
          line: 0,
          column: 11,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 21,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
    Stmt(
      id: 9,
      kind: Expr(Expr(
        id: 12,
        kind: BinaryOp(BinaryOpExpression(
          op: Add,
          lhs: Expr(
            id: 10,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "x",
                  span: Span(
                    start: 22,
                    end: 23,
                    start_lc: LineColumn(
                      line: 0,
                      column: 22,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 23,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 22,
                end: 23,
                start_lc: LineColumn(
                  line: 0,
                  column: 22,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 23,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 22,
              end: 23,
              start_lc: LineColumn(
                line: 0,
                column: 22,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 23,
              ),
            ),
          ),
          rhs: Expr(
            id: 11,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "y",
                  span: Span(
                    start: 26,
                    end: 27,
                    start_lc: LineColumn(
                      line: 0,
                      column: 26,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 27,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 26,
                end: 27,
                start_lc: LineColumn(
                  line: 0,
                  column: 26,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 27,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 26,
              end: 27,
              start_lc: LineColumn(
                line: 0,
                column: 26,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 27,
              ),
            ),
          ),
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 22,
          end: 27,
          start_lc: LineColumn(
            line: 0,
            column: 22,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 27,
          ),
        ),
      )),
      span: Span(
        start: 22,
        end: 28,
        start_lc: LineColumn(
          line: 0,
          column: 22,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 28,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 28,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 28,
    ),
  ),
)
