crates/tlang_parser/tests/snapshots/parser__simple_call.snap
---
source: crates/tlang_parser/tests/parser.rs
expression: "parse! (\"foo(1, 2);\")"
---
Module(
  id: 2,
  statements: [
    Stmt(
      id: 3,
      kind: Expr(Expr(
        id: 7,
        kind: Call(CallExpression(
          callee: Expr(
            id: 4,
            kind: Path(Path(
              segments: [
                Ident(
                  name: "foo",
                  span: Span(
                    start: 0,
                    end: 3,
                    start_lc: LineColumn(
                      line: 0,
                      column: 0,
                    ),
                    end_lc: LineColumn(
                      line: 0,
                      column: 3,
                    ),
                  ),
                ),
              ],
              res: Unresolved,
              span: Span(
                start: 0,
                end: 3,
                start_lc: LineColumn(
                  line: 0,
                  column: 0,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 3,
                ),
              ),
            )),
            leading_comments: [],
            trailing_comments: [],
            span: Span(
              start: 0,
              end: 3,
              start_lc: LineColumn(
                line: 0,
                column: 0,
              ),
              end_lc: LineColumn(
                line: 0,
                column: 3,
              ),
            ),
          ),
          arguments: [
            Expr(
              id: 5,
              kind: Literal(UnsignedInteger(1)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 4,
                end: 5,
                start_lc: LineColumn(
                  line: 0,
                  column: 4,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 5,
                ),
              ),
            ),
            Expr(
              id: 6,
              kind: Literal(UnsignedInteger(2)),
              leading_comments: [],
              trailing_comments: [],
              span: Span(
                start: 7,
                end: 8,
                start_lc: LineColumn(
                  line: 0,
                  column: 7,
                ),
                end_lc: LineColumn(
                  line: 0,
                  column: 8,
                ),
              ),
            ),
          ],
        )),
        leading_comments: [],
        trailing_comments: [],
        span: Span(
          start: 0,
          end: 9,
          start_lc: LineColumn(
            line: 0,
            column: 0,
          ),
          end_lc: LineColumn(
            line: 0,
            column: 9,
          ),
        ),
      )),
      span: Span(
        start: 0,
        end: 10,
        start_lc: LineColumn(
          line: 0,
          column: 0,
        ),
        end_lc: LineColumn(
          line: 0,
          column: 10,
        ),
      ),
      leading_comments: [],
      trailing_comments: [],
    ),
  ],
  span: Span(
    start: 0,
    end: 10,
    start_lc: LineColumn(
      line: 0,
      column: 0,
    ),
    end_lc: LineColumn(
      line: 0,
      column: 10,
    ),
  ),
)
